# at24cx

./: LICENSE
examples/esp32_implementation/: CMakeLists.txt  Makefile  README.md  sdkconfig
examples/esp32_implementation/main/: CMakeLists.txt  at24cx_i2c.c  at24cx_i2c_hal.c  at24cx_i2c_hal.h  example_usage.c
examples/rpi_pico_implementation/: CMakeLists.txt  README.md  at24cx_i2c.c  at24cx_i2c.h  at24cx_i2c_hal.c  at24cx_i2c_hal.h  dev_reg.c  dev_reg.h  example_usage.c
src/: at24cx_i2c.c  at24cx_i2c.h  at24cx_i2c_hal.c  at24cx_i2c_hal.h
